# NexusVoice-2.5

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY_GUIDE.md  README.md  README_EN.md  capacitor.config.ts  electron-main.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  supabase_setup.sql  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
api/: index.py
changelogs/: CHANGELOG_v0.12.0.md  CHANGELOG_v0.12.5.md  CHANGELOG_v0.13.0.md  CHANGELOG_v0.275.md  CHANGELOG_v0.5.0.md  CHANGELOG_v0.5.25.md  CHANGELOG_v0.5.50.md  CHANGELOG_v0.6.0.md  CHANGELOG_v0.6.50.md  CHANGELOG_v0.7.0.md  CHANGELOG_v0.7.25.md  CHANGELOG_v0.8.0.md
cpp_terminal/: CMakeLists.txt  terminal_client.cpp
scripts/: dev.sh
server/: server.ts  vite.ts
server/routes/: index.ts
src/: App.tsx  constants.ts  index.css
src/components/: AuthModal.tsx  ChatPanel.tsx  SettingsModal.tsx  VideoPlayer.tsx  VoiceControl.tsx  WelcomeGreeting.tsx
src/hooks/: useChatApi.ts  useSpeechRecognition.ts  useTTS.ts
src/lib/: supabase.ts
src/pages/: Home.tsx
src/store/: useI18n.ts  useStore.ts
